--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,14 @@
   "description": "Node app to manage book shelves",
   "main": "server.js",
   "scripts": {
+    "installDep": "npm install",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Simon Goback",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "eventemitter3": "^4.0.4",
     "express": "^4.17.1",
     "mongodb": "^3.5.7"
   }
