--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,13 @@
   "author": "Simon Goback",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.5.7"
+    "express-session": "^1.17.1",
+    "mongodb": "^3.5.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
