--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "mongodb": "^3.5.7",
     "passport": "^0.4.1",
